added create image call

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,2 +1,4 @@
-docker-remote-api-host=192.168.59.103
-docker-remote-api-port=2375
+#docker-remote-api-host=192.168.59.103
+#docker-remote-api-port=2375
+docker-remote-api-host=45.55.223.5
+docker-remote-api-port=12375
